# ndarray-unit

./: .gitignore  .travis.yml  BADGES.md  Cargo.toml  Makefile  README.md  README.tpl
doc/: .rustc_info.json  source-files.js
doc/doc/: aliases.js
doc/itertools/: enum.MinMaxResult.html  enum.Position.html  macro.iproduct.html
doc/matrixmultiply/: index.html
doc/ndarray/: all.html  fn.Dim.html  fn.Ix1.html  fn.Ix5.html  fn.arr0.html  fn.rcarr3.html  macro.azip.html  struct.ArrayBase.html  struct.Axis.html  struct.IxDynImpl.html  struct.OwnedArcRepr.html  struct.OwnedRepr.html  struct.RawViewRepr.html  struct.Shape.html  struct.Slice.html  struct.SliceInfo.html  struct.StrideShape.html  struct.ViewRepr.html  trait.AsArray.html  trait.DataOwned.html  trait.IndexLonger.html  trait.NdFloat.html  trait.RemoveAxis.html  type.Array3.html  type.ArrayView.html  type.ArrayView0.html  type.ArrayView1.html  type.ArrayView3.html  type.ArrayViewMut3.html  type.Ix.html  type.Ix3.html  type.Ix4.html
doc/ndarray_unit/: enum.BaseUnit.html  fn.get_coulomb.html  fn.get_hertz.html  fn.get_second.html  fn.get_weber.html  struct.Unit.html
doc/num_complex/: all.html  struct.ParseComplexError.html
doc/rawpointer/: fn.ptrdistance.html  trait.PointerExt.html
docs/: aliases.js  index.html  search-index.js  settings.html  source-files.js
docs/itertools/: enum.Diff.html  enum.FoldWhile.html  fn.all.html  fn.repeat_n.html  fn.unfold.html  trait.PeekingNext.html
docs/main/: index.html
docs/ndarray/: enum.CowRepr.html  fn.Ix0.html  (+26 more)
src/: array_unit.rs  lib.rs  test.rs  unit.rs
(+391 files in other folders)
