[package]
name = "ndarray-unit"
version = "0.1.1"
authors = ["Politinsa <etienne.politinsa@gmail.com>"]
edition = "2018"
description = "A package providing a system of units to the ndarray type"
license = "MIT OR Apache-2.0"
repository = "https://github.com/politinsa/ndarray-unit/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
