[package]
name = "ndarray-unit"
version = "0.2.1"
authors = ["Politinsa <etienne.politinsa@gmail.com>"]
edition = "2018"
description = "A package providing a system of units to the ndarray type"
license = "MIT OR Apache-2.0"

homepage = "https://crates.io/crates/ndarray-unit"
documentation = "https://doc.rs/ndarray-unit"
repository = "https://github.com/politinsa/ndarray-unit/"
readme = "README.md"

keywords = ["unit", "array", "si", "matrix", "multidimensionnal"]
categories = ["mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
